--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
 
 <body>
   <div class="container">
-    <div class="layout-container sidebar-container"></div>
+    <div class="layout-container sidebar-container">
+      <h3 class="dashboard-title">Dashboard</h3>
+      <ul class="top-nav">
+        <li>Home</li>
+        <li>Profile</li>
+        <li>Messages</li>
+        <li>History</li>
+        <li>Tasks</li>
+        <li>Communities</li>
+      </ul>
+      <ul class="bottom-nav">
+        <li>Settings</li>
+        <li>Support</li>
+        <li>Privacy</li>
+      </ul>
+    </div>
     <div class="layout-container header-container"></div>
     <div class="layout-container projects-container"></div>
   </div>
