feat: add color variables and sidebar styling

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <div class="layout-container sidebar-container">
       <h3 class="dashboard-title">Dashboard</h3>
       <ul class="top-nav">
-        <li>Home</li>
-        <li>Profile</li>
-        <li>Messages</li>
-        <li>History</li>
-        <li>Tasks</li>
-        <li>Communities</li>
+        <li><a href=''>Home</a></li>
+        <li><a href=''>Profile</a></li>
+        <li><a href=''>Messages</a></li>
+        <li><a href=''>History</a></li>
+        <li><a href=''>Tasks</a></li>
+        <li><a href=''>Communities</a></li>
       </ul>
       <ul class="bottom-nav">
-        <li>Settings</li>
-        <li>Support</li>
-        <li>Privacy</li>
+        <li><a href=''>Settings</a></li>
+        <li><a href=''>Support</a></li>
+        <li><a href=''>Privacy</a></li>
       </ul>
     </div>
     <div class="layout-container header-container"></div>
