refactor: remove ul and li from sidebar

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
   <div class="container">
     <div class="layout-container sidebar-container">
       <h3 class="dashboard-title">Dashboard</h3>
-      <ul class="top-nav">
-        <li><a href=''>Home</a></li>
-        <li><a href=''>Profile</a></li>
-        <li><a href=''>Messages</a></li>
-        <li><a href=''>History</a></li>
-        <li><a href=''>Tasks</a></li>
-        <li><a href=''>Communities</a></li>
-      </ul>
-      <ul class="bottom-nav">
-        <li><a href=''>Settings</a></li>
-        <li><a href=''>Support</a></li>
-        <li><a href=''>Privacy</a></li>
-      </ul>
+      <div class="top-nav">
+        <a href=''>Home</a>
+        <a href=''>Profile</a>
+        <a href=''>Messages</a>
+        <a href=''>History</a>
+        <a href=''>Tasks</a>
+        <a href=''>Communities</a>
+      </div>
+      <div class="bottom-nav">
+        <a href=''>Settings</a>
+        <a href=''>Support</a>
+        <a href=''>Privacy</a>
+      </div>
     </div>
     <div class="layout-container header-container"></div>
     <div class="layout-container projects-container"></div>
