--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="layout-container sidebar-container">
-      <h3 class="dashboard-title">Dashboard</h3>
+      <h1 class="dashboard-title">Dashboard</h1>
       <div class="top-nav">
         <a href=''>Home</a>
         <a href=''>Profile</a>
@@ -31,7 +31,26 @@
         <a href=''>Privacy</a>
       </div>
     </div>
-    <div class="layout-container header-container"></div>
+    <div class="layout-container header-container">
+      <div class='header-top-row'>
+        <label for='search-bar'>???</label>
+        <input type='search' name='search-bar' id='search-bar'>
+        <div class='notification'></div>
+        <div class='user-account'></div>
+      </div>
+      <div class='header-bottom-row'>
+        <div class='user-info'>
+          <img src=''>
+          <p>Hi there,</p>
+          <h3>Morgan Oakley (@morgan)</h3>
+        </div>
+        <div class='buttons'>
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
+      </div>
+    </div>
     <div class="layout-container projects-container"></div>
   </div>
 
