feat: redo html layout and css for sidebar

--- a/index.html
+++ b/index.html
@@ -11,48 +11,71 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
-  <div class="container">
-    <div class="layout-container sidebar-container">
-      <h1 class="dashboard-title">Dashboard</h1>
-      <div class="top-nav">
-        <a href=''>Home</a>
-        <a href=''>Profile</a>
-        <a href=''>Messages</a>
-        <a href=''>History</a>
-        <a href=''>Tasks</a>
-        <a href=''>Communities</a>
+  <aside class="container">
+    <aside class="sidebar">
+
+      <div class="logo">
+        <i class="material-symbols-outlined">dashboard</i>
+        <h1 class="logo">Dashboard</h1>
       </div>
-      <div class="bottom-nav">
-        <a href=''>Settings</a>
-        <a href=''>Support</a>
-        <a href=''>Privacy</a>
-      </div>
-    </div>
-    <div class="layout-container header-container">
-      <div class='header-top-row'>
-        <label for='search-bar'>???</label>
-        <input type='search' name='search-bar' id='search-bar'>
-        <div class='notification'></div>
-        <div class='user-account'></div>
-      </div>
-      <div class='header-bottom-row'>
-        <div class='user-info'>
-          <img src=''>
+
+      <nav class="sidebar-nav">
+        <ul>
+          <li><a href='#'><i class="material-symbols-outlined">home</i> Home</a></li>
+          <li><a href='#'><i class="material-symbols-outlined">id_card</i> Profile</a></li>
+          <li><a href='#'><i class="material-symbols-outlined">mode_comment</i> Messages</a></li>
+          <li><a href='#'><i class="material-symbols-outlined">schedule</i> History</a></li>
+          <li><a href='#'><i class="material-symbols-outlined">task</i> Tasks</a></li>
+          <li><a href='#'><i class="material-symbols-outlined">groups</i> Communities</a></li>
+          <li class='spacer'></li>
+          <li><a href='#'><i class="material-symbols-outlined">settings</i> Settings</a></li>
+          <li><a href='#'><i class="material-symbols-outlined">help_center</i> Support</a></li>
+          <li><a href='#'><i class="material-symbols-outlined">verified_user</i> Privacy</a></li>
+        </ul>
+      </nav>
+    </aside>
+
+    <main class="top-nav">
+      <header class='header'>
+        <div class="search-container">
+          <label for='search-bar'><i class="material-symbols-outlined">search</i></label>
+          <input type='search' name='search-bar' class='search-bar' id='search-bar' placeholder='Search...'>
+        </div>
+        <div class="user-actions">
+          <div class='notifications'>
+            <i class="fa-solid fa-bell"></i>
+          </div>
+          <div class='user-account'>
+            <!-- User Avatar Goes Here -->
+            <!-- <img src='' alt='User Avatar' class='avatar-small'> -->
+            <span class="username">Jason Soprovich</span>
+          </div>
+        </div>
+      </header>
+
+      <div class='user-greeting'>
+        <div class="greeting-avatar">
+          <!-- User Avatar Goes Here -->
+          <!-- <img src='' alt='User Avatar' class='avatar-small'> -->
+        </div>
+        <div class="greeting-text">
           <p>Hi there,</p>
-          <h3>Morgan Oakley (@morgan)</h3>
+          <h2>Morgan Oakley (@morgan)</h2>
         </div>
-        <div class='buttons'>
-          <button>New</button>
-          <button>Upload</button>
-          <button>Share</button>
+        <div class='action-buttons'>
+          <button class='button'>New</button>
+          <button class='button'>Upload</button>
+          <button class='button'>Share</button>
         </div>
       </div>
-    </div>
-    <div class="layout-container projects-container"></div>
-  </div>
+
+      <div class='dashboard-content'></div>
+    </main>
 
 </body>
 
