feat: style and update header nav section

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
             <i class="fa-solid fa-bell"></i>
           </div>
           <div class='user-account'>
-            <!-- User Avatar Goes Here -->
-            <!-- <img src='' alt='User Avatar' class='avatar-small'> -->
+            <img src='./images/jason yellow.png' alt='User Avatar' class='avatar-small'>
             <span class="username">Jason Soprovich</span>
           </div>
         </div>
@@ -60,8 +59,7 @@
 
       <div class='user-greeting'>
         <div class="greeting-avatar">
-          <!-- User Avatar Goes Here -->
-          <!-- <img src='' alt='User Avatar' class='avatar-small'> -->
+          <img src='./images/jason yellow.png' alt='User Avatar' class='avatar-large'>
         </div>
         <div class="greeting-text">
           <p>Hi there,</p>
