feat: style search bar and icons in header

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
     <main class="top-nav">
       <header class='header'>
         <div class="search-container">
-          <label for='search-bar'><i class="material-symbols-outlined">search</i></label>
+          <label for='search-bar'><i class="material-symbols-outlined search-icon">search</i></label>
           <input type='search' name='search-bar' class='search-bar' id='search-bar' placeholder='Search...'>
         </div>
         <div class="user-actions">
           <div class='notifications'>
-            <i class="fa-solid fa-bell"></i>
+            <a href='#'><i class="material-symbols-outlined notification-icon">notifications_active</i></a>
           </div>
           <div class='user-account'>
-            <img src='./images/jason yellow.png' alt='User Avatar' class='avatar-small'>
-            <span class="username">Jason Soprovich</span>
+            <a href='#'><img src='./images/jason yellow.png' alt='User Avatar' class='avatar-small'></a>
+            <a href='#'><span class="username">Jason Soprovich</span></a>
           </div>
         </div>
       </header>
