--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, fuga? Maiores qui quisquam pariatur
                 praesentium?
               </p>
-              <div>
+              <div class='card-actions'>
                 <i class='material-symbols-outlined'>star</i>
                 <i class='material-symbols-outlined'>visibility</i>
                 <i class='material-symbols-outlined'>share</i>
@@ -92,7 +92,7 @@
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis possimus repellat voluptas non
                 tempore dolorem perspiciatis illo inventore illum excepturi.
               </p>
-              <div>
+              <div class='card-actions'>
                 <i class='material-symbols-outlined'>star</i>
                 <i class='material-symbols-outlined'>visibility</i>
                 <i class='material-symbols-outlined'>share</i>
@@ -102,7 +102,7 @@
               <h4>Impossible App</h4>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa!
               </p>
-              <div>
+              <div class='card-actions'>
                 <i class='material-symbols-outlined'>star</i>
                 <i class='material-symbols-outlined'>visibility</i>
                 <i class='material-symbols-outlined'>share</i>
@@ -113,7 +113,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe aliquid distinctio dolorum! Repellat
                 eveniet nemo, neque velit esse illum modi.
               </p>
-              <div>
+              <div class='card-actions'>
                 <i class='material-symbols-outlined'>star</i>
                 <i class='material-symbols-outlined'>visibility</i>
                 <i class='material-symbols-outlined'>share</i>
@@ -124,7 +124,7 @@
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, dicta repudiandae. Vitae asperiores
                 eum laboriosam?
               </p>
-              <div>
+              <div class='card-actions'>
                 <i class='material-symbols-outlined'>star</i>
                 <i class='material-symbols-outlined'>visibility</i>
                 <i class='material-symbols-outlined'>share</i>
@@ -135,7 +135,7 @@
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio sequi sint delectus. Commodi odit nam
                 tempore esse consequatur.
               </p>
-              <div>
+              <div class='card-actions'>
                 <i class='material-symbols-outlined'>star</i>
                 <i class='material-symbols-outlined'>visibility</i>
                 <i class='material-symbols-outlined'>share</i>
