feat: styling for announcement container

--- a/index.html
+++ b/index.html
@@ -145,25 +145,27 @@
         </section>
         <aside class='right-sidebar'>
           <section class='announcements'>
-            <h3>
-              <div class='announcement-card'>
-                <div class='announcement-item'>
-                  <h3>Site Maintenance</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, repellat.</p>
-                </div>
-                <div class='announcement-item'>
-                  <h3>Community Share Day</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime possimus explicabo ratione animi,
-                    accusantium illum!
-                  </p>
-                </div>
-                <div class='announcement-item'>
-                  <h3>Updated Privacy Policy</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus dolorem nihil nemo
-                    eligendi odio suscipit.</p>
-                </div>
+            <h3>Announcements</h3>
+            <div class='announcement-card'>
+              <div class='announcement-item'>
+                <h5>Site Maintenance</h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum, repellat.</p>
               </div>
-            </h3>
+              <hr>
+              <div class='announcement-item'>
+                <h5>Community Share Day</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime possimus explicabo ratione animi,
+                  accusantium illum!
+                </p>
+              </div>
+              <hr>
+              <div class='announcement-item'>
+                <h5>Updated Privacy Policy</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus dolorem nihil nemo
+                  eligendi odio suscipit.</p>
+              </div>
+            </div>
+
           </section>
           <section class='trending'>
             <h3>Trending</h3>
