feat: add syling to trending section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class='user-account'>
             <a href='#'><img src='./images/jason yellow.png' alt='User Avatar' class='avatar-small'></a>
-            <a href='#'><span class='username'>Jason Soprovich</span></a>
+            <a href='#'><span class='username'>Morgan Oakley</span></a>
           </div>
         </div>
       </header>
