feat: add avatar images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href='#'><i class='material-symbols-outlined notification-icon'>notifications_active</i></a>
           </div>
           <div class='user-account'>
-            <a href='#'><img src='./images/jason yellow.png' alt='User Avatar' class='avatar-small'></a>
+            <a href='#'><img src='./images/morgan.png' alt='User Avatar' class='avatar-small'></a>
             <a href='#'><span class='username'>Morgan Oakley</span></a>
           </div>
         </div>
@@ -59,7 +59,7 @@
 
       <div class='user-greeting'>
         <div class='greeting-avatar'>
-          <img src='./images/jason yellow.png' alt='User Avatar' class='avatar-large'>
+          <img src='./images/morgan.png' alt='User Avatar' class='avatar-large'>
         </div>
         <div class='greeting-text'>
           <p>Hi there,</p>
@@ -171,28 +171,28 @@
             <h3>Trending</h3>
             <div class='trending-card'>
               <div class='trending-item'>
-                <img src='./images/jason yellow.png' class='avatar-small' alt='User Avatar'>
+                <img src='./images/tegan.png' class='avatar-small' alt='User Avatar'>
                 <div class='trending-info'>
                   <p class='trending-username'>@tegan</p>
                   <p class='trending-project'>World Peace Builder</p>
                 </div>
               </div>
               <div class='trending-item'>
-                <img src='./images/jason yellow.png' class='avatar-small' alt='User Avatar'>
+                <img src='./images/morgan.png' class='avatar-small' alt='User Avatar'>
                 <div class='trending-info'>
                   <p class='trending-username'>@morgan</p>
                   <p class='trending-project'>Super Cool Project</p>
                 </div>
               </div>
               <div class='trending-item'>
-                <img src='./images/jason yellow.png' class='avatar-small' alt='User Avatar'>
+                <img src='./images/kendall.png' class='avatar-small' alt='User Avatar'>
                 <div class='trending-info'>
                   <p class='trending-username'>@kendall</p>
                   <p class='trending-project'>Life Changing App</p>
                 </div>
               </div>
               <div class='trending-item'>
-                <img src='./images/jason yellow.png' class='avatar-small' alt='User Avatar'>
+                <img src='./images/alex.png' class='avatar-small' alt='User Avatar'>
                 <div class='trending-info'>
                   <p class='trending-username'>@alex</p>
                   <p class='trending-project'>No Traffic Maker</p>
