feat: add trending and logo links and styling

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
   <aside class='container'>
     <aside class='sidebar'>
 
-      <div class='logo'>
-        <i class='material-symbols-outlined'>dashboard</i>
-        <h1 class='logo'>Dashboard</h1>
-      </div>
+      <a href='' id='logo-link'>
+        <div class='logo'>
+          <i class='material-symbols-outlined'>dashboard</i>
+          <h1 class='logo'>Dashboard</h1>
+        </div>
+      </a>
 
       <nav class='sidebar-nav'>
         <ul>
@@ -171,31 +173,47 @@
             <h3>Trending</h3>
             <div class='trending-card'>
               <div class='trending-item'>
-                <img src='./images/tegan.png' class='avatar-small' alt='User Avatar'>
+                <a href='#'><img src='./images/tegan.png' class='avatar-small' alt='User Avatar'></a>
                 <div class='trending-info'>
-                  <p class='trending-username'>@tegan</p>
-                  <p class='trending-project'>World Peace Builder</p>
+                  <a href='#'>
+                    <p class='trending-username'>@tegan</p>
+                  </a>
+                  <a href='#'>
+                    <p class='trending-project'>World Peace Builder</p>
+                  </a>
                 </div>
               </div>
               <div class='trending-item'>
-                <img src='./images/morgan.png' class='avatar-small' alt='User Avatar'>
+                <a href='#'><img src='./images/morgan.png' class='avatar-small' alt='User Avatar'></a>
                 <div class='trending-info'>
-                  <p class='trending-username'>@morgan</p>
-                  <p class='trending-project'>Super Cool Project</p>
+                  <a href='#'>
+                    <p class='trending-username'>@morgan</p>
+                  </a>
+                  <a href='#'>
+                    <p class='trending-project'>Super Cool Project</p>
+                  </a>
                 </div>
               </div>
               <div class='trending-item'>
-                <img src='./images/kendall.png' class='avatar-small' alt='User Avatar'>
+                <a href='#'><img src='./images/kendall.png' class='avatar-small' alt='User Avatar'></a>
                 <div class='trending-info'>
-                  <p class='trending-username'>@kendall</p>
-                  <p class='trending-project'>Life Changing App</p>
+                  <a href='#'>
+                    <p class='trending-username'>@kendall</p>
+                  </a>
+                  <a href='#'>
+                    <p class='trending-project'>Life Changing App</p>
+                  </a>
                 </div>
               </div>
               <div class='trending-item'>
-                <img src='./images/alex.png' class='avatar-small' alt='User Avatar'>
+                <a href='#'><img src='./images/alex.png' class='avatar-small' alt='User Avatar'></a>
                 <div class='trending-info'>
-                  <p class='trending-username'>@alex</p>
-                  <p class='trending-project'>No Traffic Maker</p>
+                  <a href='#'>
+                    <p class='trending-username'>@alex</p>
+                  </a>
+                  <a href='#'>
+                    <p class='trending-project'>No Traffic Maker</p>
+                  </a>
                 </div>
               </div>
             </div>
